[package]
name = "meters"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
meters-derive = { path = "meters-derive" }
chrono = "0.4.31"
rusqlite = { version = "0.30.0", features = ["chrono"] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
tokio-rusqlite = "0.5.0"
